<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_api_address"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_api_address" />
    <item
        android:id="@+id/action_api_logs"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/api_logs_title" />
    <item
        android:id="@+id/action_play_mode"
        android:icon="@drawable/ic_menu_timer"
        android:title="@string/play_mode" />
    <item
        android:id="@+id/action_music_favorites"
        android:icon="@drawable/ic_menu_night"
        android:title="@string/music_favorites" />
    <item
        android:id="@+id/action_recently_played"
        android:icon="@drawable/ic_menu_timer"
        android:title="@string/recently_played" />
    <item
        android:id="@+id/action_playlists"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/playlists" />
    <item
        android:id="@+id/action_search_music"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search_music" />
    <item android:id="@+id/action_floating_control" android:checkable="true"
        android:icon="@drawable/ic_menu_settings" android:title="@string/floating_control" />
    <item android:id="@+id/action_notification_permission"
        android:icon="@drawable/ic_menu_settings" android:title="@string/notification_settings" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/equalizer" />
        <item
            android:id="@+id/action_night"
            android:icon="@drawable/ic_menu_night"
            android:title="@string/menu_night" />
        <item
            android:id="@+id/action_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>
